--- a/css/zodiac.css
+++ b/css/zodiac.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
-    font-size: 2em;
+    font-size: 2.3em;
 }
 h1 {
     color: white; 
@@ -18,20 +18,21 @@ h1 {
     flex-direction: column;
     color: white;
     text-align: center;
+    margin-top: 3.5em;
 }
 
 .label {
-    margin: .74em;
+    margin: 1em;
     padding-right: 40%;
     padding-left: 40%;
-    font-size: 1.5em;
+    font-size: 1.1em;
     text-align: center;
 }
 
 input {
     background-color: #959595;
     border: none;
-    padding: 10px 60px;
+    padding: 10px 40px;
     text-align: center; 
     color: white; 
     margin: .75em;
@@ -53,6 +54,17 @@ button {
     margin: .75em;
     cursor: pointer; 
     border-radius: 36px;
+}
+
+.main-container {
+    height: 48rem;
+    margin: 0 auto 3rem;
+    position: relative;
+    width: 48rem;
+    display: grid;
+    grid-template-columns: repeat(5, 20%);
+    grid-template-rows: repeat(5, 20%);
+    justify-items: center;
 }
 
 html {
