--- a/css/zodiac.css
+++ b/css/zodiac.css
@@ -1,4 +1,6 @@
 
+/* Fonts */
+
 @font-face {
     font-family: 'chewy-regular';
     src: url(../fonts/chewy-regular-webfont.woff2) format('woff2'),
@@ -22,10 +24,13 @@ body {
     font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
     font-size: 2.3em;
 }
+
+/* Site Title */
 h1 {
     color: white; 
     text-align: center;
 }
+
 .container {
     display: flex;
     flex-direction: column;
@@ -165,7 +170,6 @@ img {
     border-radius: 50%;
     object-fit: cover;
     margin: auto;
-    
 }
 
 .cardContainer {
@@ -202,6 +206,23 @@ p {
     margin-right: auto;
     line-height: 1.5em;
     text-align: start;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+}
+
+.previous {
+    border-radius: 50%;
+    color: #c4c4c4;
+    transform: translate(-15px, -80px);
+}
+
+.next {
+    border-radius: 50%;
+    color: #c4c4c4;
+    transform: translate(250px, -80px);
 }
 
 html {
