--- a/css/zodiac.css
+++ b/css/zodiac.css
@@ -19,16 +19,16 @@
     url(../fonts/blinker-semibold-webfont.woff) format('woff');
  }
  
-
-body {
-    font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
-    font-size: 2.3em;
-}
-
-/* Site Title */
+ /* Site Title */
 h1 {
     color: white; 
     text-align: center;
+}
+
+/* Date Form Box */
+body {
+    font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
+    font-size: 2.3em;
 }
 
 .container {
@@ -39,6 +39,7 @@ h1 {
     margin-top: 3.5em;
 }
 
+/* Question Title */
 .label {
     margin: 1em;
     padding-right: 40%;
@@ -47,6 +48,7 @@ h1 {
     text-align: center;
 }
 
+/* Birthday Input Form Box */
 input {
     background-color: #959595;
     border: none;
@@ -59,6 +61,7 @@ input {
     font-size: 22px;
 }
 
+/* Submit Button */
 #submit {
     background-color: #959595;
     border: none;
@@ -74,6 +77,7 @@ input {
     border-radius: 36px;
 }
 
+/*
 .mainContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -83,7 +87,7 @@ input {
     margin: 0;
     padding: 3em;
 }
-
+*/
 
 /*.mainContainer {
     display: grid;
@@ -208,6 +212,7 @@ p {
     text-align: start;
 }
 
+/* Arrow Buttons */
 a {
     text-decoration: none;
     display: inline-block;
@@ -225,11 +230,11 @@ a {
     transform: translate(250px, -80px);
 }
 
+/* Background Image */
 html {
     background-image: url("../images/background.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    /* how do I cut off the height*/
 }
