--- a/css/test.css
+++ b/css/test.css
@@ -13,8 +13,16 @@
     align-items: center;
     width: 20%;
     height: 20%;
-    background-color: rgb(179, 70, 70);
 }
+
+button {
+    display: block;
+    position: relative;
+    background: none;
+    border: none;
+    padding: 0;
+}
+
 
 .cell:nth-of-type(4) > * {
     transform: translate(0, 50%);
@@ -30,4 +38,16 @@
 
 .cell:nth-of-type(10) > * {
     transform: translate(-50%, 0);
+}
+
+.cell:nth-of-type(24) > * {
+    transform: translate(0%, -25%);
+}
+
+html {
+    background-image: url("../images/background.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
 }
