--- a/css/zodiac.css
+++ b/css/zodiac.css
@@ -25,6 +25,7 @@ h1 {
     text-align: center;
 }
 
+
 /* Date Form Box */
 body {
     font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
@@ -76,6 +77,8 @@ input {
     border-radius: 36px;
 }
 
+
+/* 12 Buttons */
 .crewmate {
     background: none;
     border: none;
@@ -91,24 +94,105 @@ main {
     margin: 2em;
 }
 
+.description-title {
+    color: black; 
+    text-align: center
+}
 
-/* Card Container Description */
+/* Card Description Box */
+
+.card {
+    border-radius: 50%;
+    object-fit: cover;
+    margin-top: 1em;
+}
+
+h2 {
+    font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
+    font-size: 4em;
+    color: black;
+    margin: 0.4em
+}
+
+h3 {
+    font-family: 'blinker-semibold', Arial, Helvetica, sans-serif;
+    font-size: 2em;
+    color: black;
+    margin-top: 1.1em;
+}
+
+p {
+    font-family: 'blinker-regular', Arial, Helvetica, sans-serif;
+    font-size: 1.6em;
+    color: black;
+    width: 70%;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5em;
+    text-align: start;
+}
+
+/* Modal */
+.popup .overlay {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    background: rgba( 0,0,0,0.7);
+    z-index: 1;
+    display: none;
+}
+
+.popup .content {
+    position: absolute;
+    border-radius: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    background: #fff;
+    width: 587px;
+    height: 707px;
+    z-index: 2;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.popup .close-btn {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 30px;
+    height: 30px;
+    background: #222;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+.popup.active .overlay {
+    display: block;
+
+}
+
+.popup.active .content {
+    transition: all 300ms ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+/*
+
+Card Container Description 
 
 img {
     border-radius: 50%;
     object-fit: cover;
     margin: auto;
-}
-
-.cardContainer {
-    border-radius: 14px;
-    background-color: white;
-    transition: 0.5s;
-    padding: 1em 1em;
-    margin: 4em 10em 5em;
-    color: black;
-    width: 400px;
-    text-align: center;
 }
 
 h2 {
@@ -134,7 +218,8 @@ p {
     margin-right: auto;
     line-height: 1.5em;
     text-align: start;
-}
+}*/
+
 
 /* Arrow Buttons */
 a {
