--- a/css/main.css
+++ b/css/main.css
@@ -32,24 +32,25 @@ body {
     font-size: 2.3em;
 }
 
-.container {
+/* .container {
     display: flex;
     flex-direction: column;
     color: white;
     text-align: center;
-}
+} */
 
 /* Question Title */
-.label {
-    margin: .75em;
-    padding-right: 40%;
-    padding-left: 40%;
+.description {
+    display: flex;
+    justify-content: center;
+    margin: auto;
     font-size: 1.1em;
+    color: white; 
     text-align: center;
 }
 
 /* Birthday Input Form Box */
-input {
+#bday {
     background-color: #959595;
     border: none;
     padding: 10px 40px;
@@ -63,6 +64,7 @@ input {
 
 /* Submit Button */
 #submit {
+    margin: auto 80px;
     background-color: #959595;
     border: none;
     font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
@@ -70,9 +72,6 @@ input {
     color: white;
     padding: 8px 40px;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin: .75em;
     cursor: pointer; 
     border-radius: 36px;
 }
@@ -97,6 +96,19 @@ input {
     align-items: center;
     flex-direction: column;
 }
+
+.modal .blanket {
+    background-color: rgba(0, 0, 0, .8);
+    
+    height: 100vh;
+    width: 100vw;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
 
 .modal-body {
     background-color: white;
@@ -129,9 +141,20 @@ input {
     background-repeat: no-repeat;
 }
 
+/* Button Images */
 #white {
     background-image: url('../images/white.svg');
 }
+
+#black {
+    background-image: url('../images/black.svg');
+}
+
+#yellow {
+    background-image: url('../images/yellow.svg');
+}
+
+
 
 /* Description */
 #zMoreInfo {
