--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ main {
     flex-wrap: wrap;
     align-items: center;
     flex-direction: column;
-    margin: auto;
+    /* margin: auto; */
 }
 
 .column {
@@ -67,7 +67,7 @@ main {
     padding: 10px 40px;
     text-align: center; 
     color: white; 
-    margin-top: 20px;
+    /* margin-top: 20px; */
     border-radius: 2px;
     font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
     font-size: 22px;
@@ -75,8 +75,8 @@ main {
 
 /* Submit Button */
 #submit {
-    margin: auto 80px;
-    margin-bottom: 20px;
+    /* margin: auto 80px; */
+    /* margin-bottom: 20px; */
     background-color: #959595;
     border: none;
     font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
