--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ body {
 .description {
     display: flex;
     justify-content: center;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     font-size: 1em;
     color: white;
     text-align: center;
@@ -59,6 +59,12 @@ main {
     align-items: center;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 /* Birthday Input Form Box */
 #bday {
@@ -149,6 +155,9 @@ main {
     height: 150px;
     border: none;
     background-color: transparent;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     cursor: pointer;
     outline: none;
     background-repeat: no-repeat;
