--- a/css/main.css
+++ b/css/main.css
@@ -46,9 +46,10 @@ body {
 
 main {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
+    min-height: 100vh;
     /* margin: auto; */
 }
 
@@ -65,6 +66,8 @@ main {
     justify-content: center;
     align-items: center;
 }
+
+
 
 /* Birthday Input Form Box */
 #bday {
