--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
@@ -60,13 +60,12 @@ main {
     align-items: center;
 }
 
-.wrapper {
+#wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-
 
 
 /* Birthday Input Form Box */
