--- a/css/main.css
+++ b/css/main.css
@@ -55,9 +55,10 @@ main {
 
 .column {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 #wrapper {
