--- a/css/main.css
+++ b/css/main.css
@@ -56,9 +56,11 @@ main {
 .column {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 100%;
+
 }
 
 #wrapper {
