--- a/css/main.css
+++ b/css/main.css
@@ -174,7 +174,7 @@ main {
 
 .zButton:hover, #bday:hover, #submit:hover {
     cursor: pointer;
-    opacity: .5,
+    opacity: 0.5,
 }
 
 /* Button Images */
