--- a/css/main.css
+++ b/css/main.css
@@ -1,164 +1,160 @@
-
 /* Fonts */
 
 @font-face {
-    font-family: 'chewy-regular';
-    src: url(../fonts/chewy-regular-webfont.woff2) format('woff2'),
-    url(../fonts/chewy-regular-webfont.woff) format('woff');
+	font-family: "chewy-regular";
+	src: url(../fonts/chewy-regular-webfont.woff2) format("woff2"),
+		url(../fonts/chewy-regular-webfont.woff) format("woff");
 }
-    
- @font-face {
-    font-family: 'blinker-regular';
-    src: url(../fonts/blinker-regular-webfont.woff2) format('woff2'),
-    url(../fonts/blinker-regular-webfont.woff) format('woff');
- }   
 
- @font-face{
-    font-family: 'blinker-semibold';
-    src: url(../fonts/blinker-semibold-webfont.woff2) format('woff2'),
-    url(../fonts/blinker-semibold-webfont.woff) format('woff');
- }
- 
+@font-face {
+	font-family: "blinker-regular";
+	src: url(../fonts/blinker-regular-webfont.woff2) format("woff2"),
+		url(../fonts/blinker-regular-webfont.woff) format("woff");
+}
 
- /* Site Title */
+@font-face {
+	font-family: "blinker-semibold";
+	src: url(../fonts/blinker-semibold-webfont.woff2) format("woff2"),
+		url(../fonts/blinker-semibold-webfont.woff) format("woff");
+}
+
+/* Site Title */
 h1 {
-    color: white; 
-    text-align: center;
+	color: white;
+	text-align: center;
 }
-
 
 /* Date Form Box */
 body {
-    font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
-    font-size: 2.3em;
-    min-height: 100vh;
+	font-family: "chewy-regular", Arial, Helvetica, sans-serif;
+	font-size: 2.3em;
+	min-height: 100vh;
 }
 
 /* Question Title */
 .description {
-    display: flex;
-    justify-content: center;
-    /* padding-top: 20px; */
-    font-size: 1em;
-    color: white;
-    text-align: center;
+	display: flex;
+	justify-content: center;
+	/* padding-top: 20px; */
+	font-size: 1em;
+	color: white;
+	text-align: center;
 }
 
-.description, #bday, #submit {
-    margin-bottom: 1rem;
+.description,
+#bday,
+#submit {
+	margin-bottom: 1rem;
 }
 
 main {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    min-height: 100vh;
-    /* margin: auto; */
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-direction: column;
+	min-height: 100vh;
+	/* margin: auto; */
 }
 
 .column {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 900px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	max-width: 900px;
 }
 
 #wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
-
 
 /* Birthday Input Form Box */
 #bday {
-    background-color: #959595;
-    border: none;
-    padding: 10px 40px;
-    text-align: center; 
-    color: white; 
-    /* margin-top: 20px; */
-    border-radius: 2px;
-    font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
-    font-size: 22px;
+	background-color: #959595;
+	border: none;
+	padding: 10px 40px;
+	text-align: center;
+	color: white;
+	/* margin-top: 20px; */
+	border-radius: 2px;
+	font-family: "chewy-regular", Arial, Helvetica, sans-serif;
+	font-size: 22px;
 }
 
 #bday::-webkit-calendar-picker-indicator {
-    filter: invert(1);
+	filter: invert(1);
 }
 
 /* Submit Button */
 #submit {
-    background-color: #959595;
-    border: none;
-    font-family: 'chewy-regular', Arial, Helvetica, sans-serif;
-    font-size: 22px;
-    color: white;
-    padding: 8px 40px;
-    text-align: center;
-    cursor: pointer; 
-    border-radius: 36px;
+	background-color: #959595;
+	border: none;
+	font-family: "chewy-regular", Arial, Helvetica, sans-serif;
+	font-size: 22px;
+	color: white;
+	padding: 8px 40px;
+	text-align: center;
+	cursor: pointer;
+	border-radius: 36px;
 }
-
 
 /* Modal */
 
 [hidden] {
-    display: none !important;
+	display: none !important;
 }
 
 .modal {
-    height: 100vh;
-    width: 100vw;
+	height: 100vh;
+	width: 100vw;
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 99;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 99;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .modal .blanket {
-    background-color: rgba(0, 0, 0, .8);
-    
-    height: 100vh;
-    width: 100vw;
+	background-color: rgba(0, 0, 0, 0.8);
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
+	height: 100vh;
+	width: 100vw;
+
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100;
 }
 
-
 .modal-body {
-    background-color: white;
-    border-radius: .75rem;
+	background-color: white;
+	border-radius: 0.75rem;
 
-    height: 70vh;
-    max-width: 30vw;
+	height: 70vh;
+	max-width: 30vw;
 
-    position: relative;
-    z-index: 101;
+	position: relative;
+	z-index: 101;
 
-    padding: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+	padding: 3rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 
-    font-size: 2rem;
-    font-weight: 300;
-    text-align: center;
+	font-size: 2rem;
+	font-weight: 300;
+	text-align: center;
 }
 
 .zButton {
@@ -173,103 +169,100 @@ main {
 	background-color: transparent;
 }
 
-.zButton:hover, #bday:hover, #submit:hover {
-    cursor: pointer;
-    opacity: 0.5,
+.zButton:hover,
+#bday:hover,
+#submit:hover {
+	cursor: pointer;
+	opacity: 0.5;
 }
 
 /* Button Images */
 
 #white {
-    background-image: url('../images/white.svg');
+	background-image: url("../images/white.svg");
 }
 
 #black {
-    background-image: url('../images/black.svg');
+	background-image: url("../images/black.svg");
 }
 
 #yellow {
-    background-image: url('../images/yellow.svg');
+	background-image: url("../images/yellow.svg");
 }
 
 #purple {
-    background-image: url('../images/purple.svg');
+	background-image: url("../images/purple.svg");
 }
 
 #pink {
-    background-image: url('../images/pink.svg');
+	background-image: url("../images/pink.svg");
 }
 
 #cyan {
-    background-image: url('../images/cyan.svg');
+	background-image: url("../images/cyan.svg");
 }
 
 #lime {
-    background-image: url('../images/lime.svg');
+	background-image: url("../images/lime.svg");
 }
 
 #red {
-    background-image: url('../images/red.svg');
+	background-image: url("../images/red.svg");
 }
 
 #orange {
-    background-image: url('../images/orange.svg');
+	background-image: url("../images/orange.svg");
 }
-
 
 #green {
-    background-image: url('../images/green.svg');
+	background-image: url("../images/green.svg");
 }
-
-
 
 #brown {
-    background-image: url('../images/brown.svg');
+	background-image: url("../images/brown.svg");
 }
 
-
 #blue {
-    background-image: url('../images/blue.svg');
+	background-image: url("../images/blue.svg");
 }
 
 #sos {
-    background-image: url('../images/sos.svg');
-    position: fixed;
-    top: 0;
-    right: 0;
-    margin-right: 2.5rem;
+	background-image: url("../images/sos.svg");
+	position: fixed;
+	top: 0;
+	right: 0;
+	margin-right: 2.5rem;
 }
-
 
 /* Description */
 #zMoreInfo {
-    font-family: 'blinker-regular', 'Times New Roman', Times, serif;
-    font-size: .65em;
-    text-align: start;
-    line-height: 1.35em;
-    padding: 5px 20px;
+	font-family: "blinker-regular", "Times New Roman", Times, serif;
+	font-size: 0.65em;
+	text-align: start;
+	line-height: 1.35em;
+	padding: 5px 20px;
 }
 
 /* Close Modal */
 #btn-modal-close {
-    position: absolute;
-    border: none;
-    right: 20px;
-    top: 20px;
-    width: 40px;
-    height: 40px;
-    font-size: 2rem;
-    background: #c4c4c4;
-    color: #fff;
-    border-radius: 50px;
+	position: absolute;
+	border: none;
+	right: 20px;
+	top: 20px;
+	width: 40px;
+	height: 40px;
+	font-size: 2rem;
+	background: #c4c4c4;
+	color: #fff;
+	border-radius: 50px;
 }
 
 /* Background Image */
 
 html {
-    background-image: url("../images/background.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 100vh;
+	background-image: url("../images/background.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	min-height: 100vh;
 }
