--- a/css/main.css
+++ b/css/main.css
@@ -110,21 +110,6 @@ main {
 }
 
 .modal {
-	height: 100vh;
-	width: 100vw;
-
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 99;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-
-.modal .blanket {
 	background-color: rgba(0, 0, 0, 0.8);
 
 	height: 100vh;
@@ -134,6 +119,11 @@ main {
 	top: 0;
 	left: 0;
 	z-index: 100;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .modal-body {
@@ -141,7 +131,8 @@ main {
 	border-radius: 0.75rem;
 
 	height: 70vh;
-	max-width: 30vw;
+	width: 100%;
+	max-width: 50rem;
 
 	position: relative;
 	z-index: 101;
