--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,8 @@ main {
 .modal {
 	background-color: rgba(0, 0, 0, 0.8);
 
+	padding: 1rem;
+
 	height: 100vh;
 	width: 100vw;
 
@@ -130,7 +132,9 @@ main {
 	background-color: white;
 	border-radius: 0.75rem;
 
-	height: 70vh;
+	height: fit-content;
+	max-height: 70vh;
+	overflow-y: scroll;
 	width: 100%;
 	max-width: 50rem;
 
